<?xml version="1.0"?>
<package>
  <name>terrain_planner</name>
  <version>0.0.0</version>
  <description>Terrain planner for safe navigation in complex terrain</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_pcl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>interactive_markers</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend> grid_map_visualization</run_depend>
  <run_depend>grid_map_rviz_plugin</run_depend>
  <run_depend>interactive_markers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
