<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_planner</name>
  <version>0.0.0</version>
  <description>Terrain planner for safe navigation in complex terrain</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_geo</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <!-- <build_depend>grid_map_pcl</build_depend> -->
  <build_depend>ompl</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>terrain_navigation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>grid_map_geo</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>terrain_navigation</exec_depend>
  <exec_depend>yaml_cpp_vendor</exec_depend>

  <exec_depend>planner_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
